feat(search): hybrid retrieval over kNN with graded local embeddings
Retrieval and ranking now form one coherent pipeline: embed the query, fetch 5x
the requested results as candidates, score them lexically against corpus-wide
BM25 statistics, blend, apply metadata boosts and recency decay, re-sort on the
final score, then truncate. Ranking previously sorted on vector similarity alone,
which left every re-ranking signal changing the number shown next to a result
without changing its position.

The local embedder produces graded similarity. Hashing whole inputs destroys
input locality, so cosine similarity is ~1.0 for identical text and ~0 otherwise
with nothing in between; feature hashing over word tokens and character n-grams
places partial matches at intermediate distances, and keeps morphological
variants close. It is a lexical model, documented as such rather than described as
semantic. Titles are indexed alongside content, so a query matching a title can
retrieve the document.

Elasticsearch retrieval uses approximate kNN over the HNSW graph built for the
vector field instead of script_score over match_all, which scored every vector in
the index per query. Metadata filters are pushed into the kNN search so they
narrow the traversal rather than discarding neighbours already found. Scores are
converted back from Elasticsearch's (1 + cosine) / 2 to raw cosine so a threshold
means the same thing against either index.

Caching is now correct. Search results are keyed on the request's value identity
and dropped whenever the corpus changes; embeddings are keyed by provider, model
and vector width as well as text, so switching configuration cannot serve vectors
the new setup cannot use, and failures are not cached. minScore filters the score
that is returned rather than the lower raw vector score, and its default of 0.2 is
calibrated to the measured distribution instead of 0.7, which returned nothing for
every realistic query.

Writes move into DocumentService, which o